--- a/main.css
+++ b/main.css
@@ -1,6 +1,56 @@
 body {
     box-sizing: border-box;
-    background-color:#5900B3;
-    padding: 10px;
-    margin: 10px;
+    background-image: url(body.jpg);
+    color: white;
+    background: linear-gradient(0, 0, 0, 0);
+    margin: 20px;
 }
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+}
+
+#logo {
+    margin-left: 5px;
+    margin-top: 20px;
+    height: 200px;
+    width: 200px;
+
+}
+#logoPhoto {
+    height: 100%;
+    width: 100%;
+}
+#headText1 {
+    line-height: 1px;
+    display: flex;
+    margin-left: 180px;
+    margin-top: 100px;
+    
+}
+#headText2 {
+    line-height: 1px;
+    display: flex;
+    margin-right: 200px;
+    margin-top: 120px;
+    
+}
+#headingContainer {
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top: 0px;
+    text-align: center;
+    background-color:#D3FFCE ;
+    border: solid white 1px;
+    height: 400px;
+    color: white;
+}
+#headingPhoto {
+   width: 100%;
+   height: 100%;
+
+
+}
+
+
