--- a/main.css
+++ b/main.css
@@ -2,16 +2,18 @@ body {
     box-sizing: border-box;
     background-image: url(body.jpg);
     color: white;
-    background: linear-gradient(0, 0, 0, 0);
+   /* background: linear-gradient(0, 0, 0, 0);*/
     margin: 20px;
+    text-decoration: none;
 }
 header {
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
+    display: inline-block;
+   /* flex-direction: row;
+    justify-content: start;*/
 }
 
 #logo {
+    display: inline-block;
     margin-left: 5px;
     margin-top: 20px;
     height: 200px;
@@ -23,20 +25,22 @@ header {
     width: 100%;
 }
 #headText1 {
+    float: right;
     line-height: 1px;
-    display: flex;
-    margin-left: 180px;
+    
+    margin-left: 240px;
     margin-top: 100px;
     
 }
 #headText2 {
+    float: right;
     line-height: 1px;
-    display: flex;
-    margin-right: 200px;
-    margin-top: 120px;
+    
+    margin-left: 200px;
+    margin-top: 5px;
     
 }
-#headingContainer {
+/*#headingContainer {
     margin-left: 50px;
     margin-right: 50px;
     margin-top: 0px;
@@ -45,12 +49,26 @@ header {
     border: solid white 1px;
     height: 400px;
     color: white;
-}
+}*/
+
 #headingPhoto {
    width: 100%;
    height: 100%;
-
-
 }
 
+#navBar {
+    width: 700px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    padding: 10px;
+  /*  border: solid salmon 1px;*/
+    margin-top: 30px;
+    border-bottom: solid red 1px;
+}
 
+#navBar a {
+    color: silver;
+    font-size: large;
+    text-decoration: none;
+}
