--- a/main.css
+++ b/main.css
@@ -1,44 +1,85 @@
-body {
+@media only screen and (min-width: 720px) {
+* {
     box-sizing: border-box;
-    background-image: url(body.jpg);
-    color: white;
+}
+
+
+body {
+    background-image: url(cool-background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: 'Source Sans Pro', sans-serif;
+    /* color: white; */
    /* background: linear-gradient(0, 0, 0, 0);*/
     margin: 20px;
     text-decoration: none;
 }
-header {
+/* header {
     display: inline-block;
-   /* flex-direction: row;
-    justify-content: start;*/
+    width: 100%;
+  
+} */
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;   
 }
 
-#logo {
-    display: inline-block;
-    margin-left: 5px;
-    margin-top: 20px;
-    height: 200px;
-    width: 200px;
-
+.head-text {
+    line-height: 20px;
+    color: #670458;  
 }
-#logoPhoto {
+
+.logoPhoto {
     height: 100%;
     width: 100%;
 }
-#headText1 {
-    float: right;
-    line-height: 1px;
+
+.headText2 {
+    margin-left: 130px;
+}
+
+.sign-up-form {
+    line-height: 30px;
+   display: grid;
+    /* border: orangered 3px solid; */
     
-    margin-left: 240px;
-    margin-top: 100px;
     
 }
-#headText2 {
-    float: right;
-    line-height: 1px;
+.form-buttons {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-evenly;
+}
+form.sign-up-form label {
+    color: #5d1363;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 18px;
+    font-weight: 900;
+}
+form.sign-up-form input {
+    border: 2px solid #2799ce ;
+    border-radius: 5px;
+}
+div.form-buttons button {
+    border: 2px solid #2799ce ;
+    border-radius: 5px;
+    color:#2799ce ;
+    font-weight: 600;
+    margin-bottom: 5px;   
+}
+
+button:hover {
     
-    margin-left: 200px;
-    margin-top: 5px;
-    
+    cursor: pointer;
+}
+div.form-buttons a {
+    font-size: 18px;
+    text-decoration: none;
+    color: #c1faee;
+    font-weight: 600;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 #headingPhoto {
@@ -54,64 +95,53 @@ header {
     padding: 10px;
   /*  border: solid salmon 1px;*/
     margin-top: 30px;
-    border-bottom: solid red 1px;
+    border-bottom: solid #4a50f7 2px;
 }
 
 #navBar a {
-    color: silver;
+    color: #670458;
+    font-weight: bold;
     font-size: large;
     text-decoration: none;
 }
 #navBar a:hover {
     color: #866bff;
 }
-#estimator1 {
-    
-    padding: 10px;
-}
+
 table td {
     overflow: hidden;     
     padding: 10px;
     
 }
 input {
+    border-color:#2799ce ;
     font-size: bold;
     font-size: 18px;
 }
 
-#lines {
-    color: springgreen;
-    background-color: red;
+.lines {
+    width: 40%;
+    background-color: #2799ce;
     border: none;
     height: 2px;
 
 }
-#calculate1 {
+.calculate-button {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: bold;
     cursor: pointer;
     margin-left: 22px;
     padding: 10px;
-    background-color: #340236;
-    color: #ce0944;
+    /* background-color: #340236; */
+    color: #4a50f7;
     font-size: 15px;
     border: solid 2px #866bff;
 
 }
-#calculate2 {
-    cursor: pointer;
-    margin-left: 22px;
-    padding: 10px;
-    background-color: #340236;
-    color: #ce0944;
-    font-size: 15px;
-    border: solid 2px #866bff;
+.calculate-button:hover {
+    border: solid 3px #866bff;
+}
 
-}
-#calculate1:hover {
-    border: red solid 1px;
-}
-#calculate2:hover {
-    border: red solid 1px;
-}
 .estimation {
     display: inline-block;
 }
@@ -129,4 +159,8 @@ h3 {
 .inpc:empty {
     background-color:whitesmoke;
     
+}
+.hidden {
+    display: none;
+}
 }
