--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 
 
 body {
-    background-image: url(cool-background.png);
+    background-image: url(https://i.postimg.cc/RhKhVqzG/cool-background.png);
     background-repeat: no-repeat;
     background-size: cover;
     font-family: 'Source Sans Pro', sans-serif;
