--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
 }
 
 body {
+    padding: 5px;
     background-image: url(https://i.postimg.cc/RhKhVqzG/cool-background.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -24,6 +25,7 @@ body {
 }
 
 .logoPhoto {
+    margin-left: 20px;
     height: 100%;
     width: 100%;
 }
@@ -33,6 +35,10 @@ body {
 }
 
 .sign-up-form {
+    border-radius: 5px;
+    margin-right: 20px;
+    padding: 8px;
+    border: 2px solid #99146b;
     line-height: 30px;
    display: grid;   
 }
@@ -107,6 +113,8 @@ table td {
 }
 
 input {
+    border-radius: 5px;
+    border-style: solid;
     border-color:#2799ce ;
     font-size: bold;
     font-size: 18px;
@@ -126,7 +134,7 @@ input {
     margin-left: 22px;
     padding: 10px;
     color: #4a50f7;
-    font-size: 15px;
+    font-size: 10px;
     border: solid 2px #866bff;
 }
 
@@ -159,4 +167,197 @@ h3 {
     display: none;
 }
 
+}
+@media only screen and (max-width: 720px) {
+    * {
+        box-sizing: border-box;
+    }
+    
+    body {
+        
+        background-image: url(https://i.postimg.cc/RhKhVqzG/cool-background.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        font-family: 'Source Sans Pro', sans-serif;
+      
+        text-decoration: none;
+    }
+    
+    .header {
+        margin-top: 30px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;   
+    }
+    
+    .head-text {
+        display: none;
+        line-height: 20px;
+        color: #670458;  
+    }
+    
+    .logoPhoto {
+        margin-left: 20px;
+        height: 100%;
+        width: 100%;
+    }
+    
+    .headText2 {
+        margin-left: 130px;
+    }
+    
+    .sign-up-form {
+        border-radius: 5px;
+        margin-right: 20px;
+        padding: 8px;
+        border: 2px solid #99146b;
+        line-height: 30px;
+       display: grid;   
+    }
+    
+    .form-buttons {
+        margin-top: 10px;
+        display: flex;
+        justify-content: space-evenly;
+    }
+    
+    form.sign-up-form label {
+        color: #5d1363;
+        font-family: 'Source Sans Pro', sans-serif;
+        font-size: 18px;
+        font-weight: 900;
+    }
+    
+    form.sign-up-form input {
+        border: 2px solid #2799ce ;
+        border-radius: 5px;
+    }
+    
+    div.form-buttons button {
+        border: 2px solid #2799ce ;
+        border-radius: 5px;
+        color:#2799ce ;
+        font-weight: 600;
+        margin-bottom: 5px;   
+    }
+    
+    button:hover {
+        cursor: pointer;
+    }
+    
+    div.form-buttons a {
+        font-size: 18px;
+        text-decoration: none;
+        color: #c1faee;
+        font-weight: 600;
+        font-family: 'Source Sans Pro', sans-serif;
+    }
+    
+    #headingPhoto {
+       width: 100%;
+       height: 100%;
+    }
+    
+    #navBar {
+        /* width: 700px; */
+        width: 80%;
+        margin-left: 50px;
+        position: fixed;
+        top: 2px;
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: row;
+        padding: 7px;
+        /* margin-top: 30px; */
+        border-bottom: solid #4a50f7 2px;
+    }
+    
+    #navBar a {
+        color: #670458;
+        font-weight: bold;
+        font-size: 12px;
+        text-decoration: none;
+    }
+    
+    #navBar a:hover {
+        color: #866bff;
+    }
+    
+    table td {
+        overflow: hidden;     
+        padding: 10px;  
+    }
+    
+    form.sign-up-form input {
+        border-radius: 5px;
+        border-style: solid;
+        border-color:#2799ce ;
+        font-size: bold;
+        font-size: 18px;
+    }
+    
+    .lines {
+        width: 40%;
+        background-color: #2799ce;
+        border: none;
+        height: 2px;
+    }
+    
+    .calculate-button {
+        font-family: 'Source Sans Pro', sans-serif;
+        font-weight: bold;
+        cursor: pointer;
+        margin-left: 22px;
+        padding: 5px;
+        color: #4a50f7;
+        font-size: 10px;
+        border: solid 2px #866bff;
+        border-radius: 5px;
+    }
+    
+    .calculate-button:hover {
+        border: solid 3px #866bff;
+    }
+    
+    /* .estimation {
+        display: inline-block;
+    } */
+    
+    /* #asba {
+        margin-left: 20px;
+        font-size: 20px;
+        font-weight: bold;
+        color:#670458 ;
+        text-decoration: underline;
+        
+    } */
+    
+    h3 {
+        display: inline-block;
+    }
+    
+    .inpc:empty {
+        background-color:whitesmoke;   
+    }
+    
+    .hidden {
+        display: none;
+    }
+    
+    .employee-estimator {
+        display: flex;
+        justify-content: space-around;
+    }
+.input-box {
+    text-align: center;
+    padding: 2px;
+    border: 2px solid red;
+}
+div.input-box input {
+    width: 80px;
+}
+.result {
+    display: flex;
+    justify-content: center;
+}
 }
