--- a/main.css
+++ b/main.css
@@ -341,7 +341,7 @@ div.sign-up-link {
     
     .lines {
         width: 40%;
-        background-color: #2799ce;
+        background-color: #4a50f7;
         border: none;
         height: 2px;
     }
