--- a/main.css
+++ b/main.css
@@ -34,8 +34,7 @@ body {
     margin-left: 130px;
 }
 
-.sign-up-form {
-    
+.sign-up-form {  
     border-radius: 5px;
     margin-right: 20px;
     padding: 8px;
@@ -109,7 +108,6 @@ div.form-buttons a {
 }
 
 
-
 input {
     border-radius: 5px;
     border-style: solid;
@@ -124,30 +122,37 @@ input {
     border: none;
     height: 2px;
 }
+
 .employee-estimator {
     display: flex;
     justify-content: space-around;
 }
+
+.employer-estimator {
+    display: flex;
+    justify-content: space-around;
+}
+
 .input-box {
     font-weight: bold;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
-     padding: 26px;
-  color: #670458;
-  border-radius: 5px;
-  border-style: solid;
-  border-color:#770085 ;
-  font-size: bold;
-  border-width: 2px;
-  
+    padding: 26px;
+    color: #670458;
+    border-radius: 5px;
+    border-style: solid;
+    border-color:#770085 ;
+    font-size: bold;
+    border-width: 2px;
 }
+
 div.input-box input {
-      width: 160px;
-      border-color:#866bff ;
-      border-style: solid;
-      border-radius: 5px;
-      
+    width: 160px;
+    border-color:#866bff ;
+    border-style: solid;
+    border-radius: 5px;     
 }
+
 .result {
     display: flex;
     justify-content: center;
@@ -157,12 +162,12 @@ div.input-box input {
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: bold;
     cursor: pointer;
-    /* margin-left: 22px; */
     padding: 14px;
     color: #4a50f7;
     font-size: 20px;
     border: solid 2px #866bff;
 }
+
 .show-result-employee {
     font-size: 25px;
     font-weight: bold;
@@ -170,9 +175,9 @@ div.input-box input {
     justify-content: center;
     text-align: center;
     color: #670458;
-    /* border: #4a50f7 2px solid; */
     margin: auto;
 }
+
 .restart {
     font-family: 'Source Sans Pro', sans-serif;
     border: #4a50f7 2px solid;
@@ -194,32 +199,42 @@ div.input-box input {
     display: inline-block;
 }
 
-
-h3 {
-    display: inline-block;
-}
-
-.inpc:empty {
-    background-color:whitesmoke;   
-}
-
 .hidden {
     display: none;
 }
+
 div.log-in-link {
     display: none;
 }
+
 div.sign-up-link {
     display: none;
 }
+
+.result-employer {
+    display: flex;
+    justify-content: center; 
 }
+
+.error {
+    animation-name: animation-end;
+    animation-duration: 4s;  
+}
+
+@keyframes animation-end {
+    0% {border-color: white;}
+    25% {border-color: red;}
+    50% {border-color: white;}
+    100% {border-color: red;}
+}
+}
+
 @media only screen and (max-width: 720px) {
     * {
         box-sizing: border-box;
     }
     
-    body {
-        
+    body {  
         background-image: url(https://i.postimg.cc/RhKhVqzG/cool-background.png);
         background-repeat: no-repeat;
         background-size: cover;
@@ -241,8 +256,7 @@ div.sign-up-link {
     
     .logoPhoto {
         margin-top: 15px;
-        width: 150px;
-        
+        width: 150px;       
     }
     
     .headText2 {
@@ -255,7 +269,7 @@ div.sign-up-link {
         padding: 8px;
         border: 2px solid #99146b;
         line-height: 30px;
-       display: grid;   
+        display: grid;   
     }
     
     .form-buttons {
@@ -281,7 +295,6 @@ div.sign-up-link {
         border-radius: 5px;
         color:#2799ce ;
         font-size: 12px;
-        /* margin-bottom: 5px;    */
     }
     
     button:hover {
@@ -300,9 +313,13 @@ div.sign-up-link {
        width: 100%;
        height: 100%;
     }
+
+    .employer-estimator {
+        display: flex;
+        justify-content: space-around;
+    }
     
-    #navBar {
-        
+    #navBar {  
         width: 100%;
         position: fixed;
         top: 1px;
@@ -311,43 +328,23 @@ div.sign-up-link {
         justify-content: space-evenly;
         flex-direction: row;
         padding: 7px;
-        padding-top: 0px;
+        padding-top: 8px;
         font-weight: bold;
-        font-size: 12px;
-          
+        font-size: 12px;     
     }
-    
-    
     
     #navBar a:hover {
         color: #866bff;
     }
       
-    /* form.sign-up-form input {
-        border-radius: 5px;
-        border-style: solid;
-        border-color:#2799ce ;
-        font-size: bold;
-        font-size: 18px;
-    } */
-    
-    .lines {
-        width: 80%;
-        background-color: #4a50f7;
-        border: none;
-        height: px;
-    }
-    
     .calculate-button {
         text-decoration: none;
         font-family: 'Source Sans Pro', sans-serif;
         font-weight: bold;
         cursor: pointer;
-        /* margin-left: 22px; */
         padding: 5px;
         color: #4a50f7;
         font-size: 10px;
-        /* border: solid 2px #866bff; */
         border-style: solid;
         border-radius: 3px;
     }
@@ -359,14 +356,7 @@ div.sign-up-link {
     form.sign-up-form {
         display: none;
     }
-    h3 {
-        display: inline-block;
-    }
-    
-    .inpc:empty {
-        background-color:whitesmoke;   
-    }
-    
+   
     .hidden {
         display: none;
     }
@@ -375,6 +365,7 @@ div.sign-up-link {
         display: flex;
         justify-content: space-around;
     }
+
     .input-box {
         font-size: 15px;
         width: 90px;
@@ -388,15 +379,15 @@ div.sign-up-link {
         font-size: bold;
         border-width: 2px;     
     }
-    div.input-box input {
-        
+
+    div.input-box input {  
           padding-left: 3px;
           width: 80px;
           border-color: white ;
           border-style: solid;
-          border-radius: 5px;
-          
+          border-radius: 5px;     
     }
+
     .result {
         display: flex;
         justify-content: center;
@@ -407,13 +398,14 @@ div.sign-up-link {
         padding: 5px;
         text-decoration: none;
     }
+
     .linkNav a {
         color: #5d1363;
         font-weight: bold;
         font-size: 12px;
         text-decoration: none;
-
     }
+
     .show-result-employee {
         display: flex;
         justify-content: center;
@@ -421,6 +413,7 @@ div.sign-up-link {
         color: #670458;
         margin: auto;
     }
+
     .restart {
         padding: 2px;
         border: #4a50f7 2px solid;
@@ -433,5 +426,18 @@ div.sign-up-link {
         width: 50px;
         height: 24px;
     }
-    
+    .result-employer {
+        display: flex;
+        justify-content: center; 
+    }
+    .error {
+        animation-name: animation-end;
+        animation-duration: 4s;  
+    }
+    @keyframes animation-end {
+        0% {border-color: white;}
+        25% {border-color: red;}
+        50% {border-color: white;}
+        100% {border-color: red;}
+    }
 }
